<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".secondPage.secondPage">

    <TextView
        android:id="@+id/txt_second_screen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/second_screen"
        android:textSize="18sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:textColor="@color/black"/>

    <ImageView
        android:id="@+id/img_back"
        android:layout_width="20dp"
        android:layout_height="15dp"
        android:src="@drawable/back_icon"
        app:layout_constraintTop_toTopOf="@id/txt_second_screen"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/txt_second_screen"
        android:layout_marginStart="28dp"
        android:layout_marginTop="4dp"/>

    <TextView
        android:id="@+id/txt_wellcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wellcome"
        app:layout_constraintTop_toBottomOf="@id/txt_second_screen"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:textSize="12sp"
        android:textStyle="normal"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/txt_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_of_user"
        app:layout_constraintTop_toBottomOf="@id/txt_wellcome"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="24dp"
        android:layout_marginTop="4dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/txt_selected_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selected_username"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:gravity="center"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:textStyle="bold"/>

    <com.example.suitmediatest.customView.customButton
        android:id="@+id/btn_choose_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/choose_a_user"/>

</androidx.constraintlayout.widget.ConstraintLayout>